# PS

./: .gitignore  .pre-commit-config.yaml  1006  1009.py  10844  1104.py  1122.py  14398  19533  21090  31090  DS.py  Hello World.cpp  Makefile  build.sh  cf.sh  clean  clean.sh  dummy  dummy.cpp  pre-commit-test.py  pre-commit-test.txt  run
.metals/: metals.lock.db  metals.mv.db
C/: Dummy.cpp
C++/: Dummy.cpp  dummmmy.cpp
C++/Backtracking/: 14888  14888.cpp  14889  14889.cpp  15649.cpp  15651.cpp  16639.cpp  1799.cpp  2239.cpp
C++/Binary_Search/: 10816.cpp  1300.cpp  2110  2110.cpp
C++/BitMask/: 1062.cpp  1086.cpp  11723  11723.cpp  1194.cpp  1311  1311.cpp  14939.cpp  1562.cpp  16637.cpp  17404.cpp  2098(TSP).cpp  2482.cpp
C++/Bruteforce/: 12100.cpp  2231.cpp  2798  2798.cpp
C++/DP/: 1006.cpp  10844  10844.cpp  1126.cpp  12852.cpp  12928.cpp  13392  13392.cpp  13907.cpp  1509.cpp  1520  1520.cpp  1533.cpp  19623(Talk dp).cpp  2169  2169.cpp  2494  2494.cpp  2565.cpp  2618  2618.cpp  5977.cpp
C++/DnC/: 11729  11729.cpp  13976  13976.cpp  13977(Binom dnc).cpp  1517.cpp  17613.cpp  1891  1891.cpp  1992  1992.cpp  2261.cpp  2448  2448.cpp  2630.cpp  C.code-workspace  Karatsuba.cpp
C++/Geometry/: 2166(Polygon Area).cpp  31397.cpp  7869.cpp  9015.cpp
C++/Graphs/: 1199(Euler Circuit).cpp  2162  2162.cpp  5719.cpp
C++/Greedy/: 1071  1071.cpp  1202.cpp  1339  1339.cpp  13560.cpp  13904  13904.cpp  16496  16496.cpp  1700  (+14 more)
C_exercises/: Bronze.c  Bronze0929.py  Frobenius.c  TestCase.py  functions.c  helloworld.c  postfix.c
Etc/: 1009.py  1104.py  1118.py  1122.py  2023_March.py  Hello World.cpp  dummy.cpp  dummyex.py
Python/: 1050.py  11266.py  2565.py  4828.py
rust_ps/: Cargo.toml  clean.py
rust_ps/src/: lib.rs  main.rs
rust_ps/src/basics/: mod.rs
rust_ps/src/data_structures/priority_queue/: prob_1715.rs
tests/: test_generator.py
(+584 files in other folders)
