[package]
name = "rust_ps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
once_cell = "1.19.0"
predicates = "3.1.0"
rand = "0.8.5"
