[[bin]]
name = "prob_1000"
path = "src/basics/prob_1000.rs"

[[bin]]
name = "prob_1001"
path = "./src/basics/prob_1001.rs"

[[bin]]
name = "prob_1008"
path = "./src/basics/prob_1008.rs"

[[bin]]
name = "prob_10869"
path = "./src/basics/prob_10869.rs"

[[bin]]
name = "prob_10998"
path = "./src/basics/prob_10998.rs"

[[bin]]
name = "prob_11720"
path = "./src/basics/prob_11720.rs"

[[bin]]
name = "prob_2557"
path = "src/basics/prob_2557.rs"

[[bin]]
name = "prob_2562"
path = "./src/basics/prob_2562.rs"

[[bin]]
name = "prob_9498"
path = "./src/basics/prob_9498.rs"

[package]
name = "rust_ps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
once_cell = "1.19.0"
predicates = "3.1.0"
rand = "0.8.5"

[lib]
name = "rust_ps_lib"
path = "src/lib.rs"

[dependencies.clap]
version = "4.0"
features = [ "derive",]
